# subscribe

./: .gitignore  README.md  pyproject.toml
subscribe/: __init__.py  subscribers.py  subscriptions.py
