[tool.poetry]
name = "subscribe"
description = "Library for managing subscriptions"
version = "0.6.1"
authors = ["Marc Rijken <marc@rijken.org>"]
license = "MIT"
repository = "https://github.com/mrijken/subscribe"
readme = "README.md"
packages = [
    { include = "subscribe" },
]
[tool.poetry.dependencies]
python = ">=3.6.2,<4.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pylint = "^2.6.0"
pytest-cov = ">=2.10.1"
mypy = ">=0.790"
isort = "^5.6.4"
pytest-nlcov = ">=0.2.0"

[tool.black]
line_length = 120

[tool.pylint.format]
max-line-length = "120"

[tool.isort]
profile = "black"
line_length = 120
known_first_party = ["subscribe"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--doctest-modules --doctest-glob=\"*.md\" --cov=subscribe --cov-report xml:coverage.xml --cov-report term-missing"
testpaths = [
    "."
]

[tool.vulture]
exclude = [".eggs", ".git", ".*cache", ".tox"]
make_whitelist = true
min_confidence = 80
sort_by_size = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
